--- a/ncrypt.Server/ncrypt.Server.csproj
+++ b/ncrypt.Server/ncrypt.Server.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Radzen.Blazor" Version="3.19.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ncrypt.Library\ncrypt.Library.csproj" />
   </ItemGroup>
 
