--- a/ncrypt.Library/ncrypt.Library.csproj
+++ b/ncrypt.Library/ncrypt.Library.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hexify" Version="1.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ncrypt.Domain\ncrypt.Domain.csproj" />
   </ItemGroup>
 
